[tool.poetry]
name = "btc-analyser"
version = "0.1.0"
description = ""
authors = ["Hyun Park <hyunp.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
PySide6 = "^6.7.2"
rustworkx = "^0.15.1"
requests = "^2.32.3"
matplotlib = "^3.9.1"
networkx = "^3.3"
pyvis = "^0.3.2"
tqdm = "^4.66.4"
scipy = "^1.14.0"
bs4 = "^0.0.2"
lxml = "^5.2.2"
pandas = "^2.2.2"
xsdata = "^24.6.1"
plotly = "^5.22.0"
gravis = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.9.0"
jupyter = "^1.0.0"
xsdata = {extras = ["cli"], version = "^24.6.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
